small changes to fix??

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ collections:
   designs:
     output: true
 
-
-background: pastelPlantPattern.jpg
+image:
+  background: pastelPlantPattern.jpg
 
 
 header_pages: 
